# LinkSystem

./: .gitignore  LinkCenter.cpp  LinkCenter.h  LinkSystem.cpp  LinkSystem.sln  LinkSystem.vcxproj  LinkSystem.vcxproj.filters  Makefile  README.md  data.txt  server.cpp
Link11/: Decode.cpp  Decode.h  Link11Center.cpp  Link11Center.h  Link11MsgUtil.cpp  Link11MsgUtil.h  encode.cpp  encode.h  hamming.cpp
Link16/: ContinueWord.cpp  ContinueWord.h  ExtendWord.cpp  ExtendWord.h  HeaderWord.cpp  HeaderWord.h  InitialWord.cpp  InitialWord.h  Link16.cpp  Link16Center.cpp  Link16Center.h  STDPMsg.cpp  STDPMsg.h  Word.hpp  dataType.h  global.cpp  global.h  interface.cpp  interface.h  link16_data.txt  makefile  reed_solomon.cpp  reed_solomon.h  tools.h
Link22/: CMakeLists.txt  Link22Center.cpp  Link22Center.h  Readme.md
LinkSystem/: CMakeLists.txt  LinkCenter.cpp  LinkCenter.h  LinkSystem.cpp  LinkSystem.vcxproj  LinkSystem.vcxproj.filters
LinkSystem/Link11/: CMakeLists.txt  Decode.cpp  Decode.h  Link11Center.cpp  Link11Center.h  Link11ConstructCenter.cpp  Link11ConstructCenter.h  Link11MsgUtil.cpp  Link11MsgUtil.h  encode.cpp  encode.h  hamming.cpp  hamming.h
LinkSystem/Link16/: CMakeLists.txt  ContinueWord.cpp  ExtendWord.cpp  HeaderWord.cpp  InitialWord.cpp  Link16  Link16.cpp  Link16Center.cpp  Link16Center.h  Word.hpp  dataType.h  interface.cpp  interface.h  tools.h
LinkSystem/Link22/: CMakeLists.txt  Link22Center.cpp  Link22Center.h  main.cpp
LinkSystem/Link22/System/: ConstructCenter.cpp  ConstructCenter.h  F0nMessage.cpp  F0nMessage.h  FnMessage.cpp  FnMessage.h  FnpMessage.cpp  FnpMessage.h
LinkSystem/Link22/Utils/: AES.cpp  AES.h  AESUtil.cpp  AESUtil.h  CrcUtil.h  Link22Variable.cpp  Link22Variable.h  MessageType.h  MsgUtil.cpp  MsgUtil.h
(+39 files in other folders)
